# build/resources/main/openapi/api.yaml
@@ -210,6 +210,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /authors/{id}/books:
+    post:
+      summary: Create book for author
+      operationId: createBookForAuthor
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BookRequestCreate'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BookResponse'
+
   /courses/{id}:
     get:
       summary: Get course by id
@@ -312,11 +337,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /courses/{id}/students:
+    post:
+      summary: Create student for course
+      operationId: createStudentForCourse
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StudentRequestCreate'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentResponse'
 
 components:
   schemas:
     UserResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -327,7 +375,6 @@ components:
         profile:
           $ref: '#/components/schemas/ProfileResponse'
     UserRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - username
@@ -340,7 +387,6 @@ components:
         profile:
           $ref: '#/components/schemas/ProfileRequestCreate'
     UserRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
       properties:
         username:
@@ -352,7 +398,6 @@ components:
           $ref: '#/components/schemas/ProfileRequestUpdate'
 
     ProfileResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -361,7 +406,6 @@ components:
         bio:
           type: string
     ProfileRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - bio
@@ -371,7 +415,6 @@ components:
           minLength: 1
           maxLength: 500
     ProfileRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
       properties:
         bio:
@@ -380,7 +423,6 @@ components:
           maxLength: 500
 
     AuthorResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -393,7 +435,6 @@ components:
           items:
             $ref: '#/components/schemas/BookResponse'
     AuthorRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - name
@@ -402,13 +443,7 @@ components:
           type: string
           minLength: 2
           maxLength: 50
-        books:
-          type: array
-          maxItems: 200
-          items:
-            $ref: '#/components/schemas/BookRequestCreate'
     AuthorRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
       properties:
         name:
@@ -422,7 +457,6 @@ components:
             $ref: '#/components/schemas/BookRequestUpdate'
 
     BookResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -431,7 +465,6 @@ components:
         title:
           type: string
     BookRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - title
@@ -441,8 +474,9 @@ components:
           minLength: 1
           maxLength: 100
     BookRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
+      required:
+        - id
       properties:
         id:
           type: string
@@ -453,7 +487,6 @@ components:
           maxLength: 100
 
     CourseResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -466,7 +499,6 @@ components:
           items:
             $ref: '#/components/schemas/StudentResponse'
     CourseRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - title
@@ -475,13 +507,7 @@ components:
           type: string
           minLength: 3
           maxLength: 100
-        students:
-          type: array
-          maxItems: 200
-          items:
-            $ref: '#/components/schemas/StudentRequestCreate'
     CourseRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
       properties:
         title:
@@ -495,7 +521,6 @@ components:
             $ref: '#/components/schemas/StudentRequestUpdate'
 
     StudentResponse:
-      x-package: "spring.ru.springtest.dto.response"
       type: object
       properties:
         id:
@@ -504,7 +529,6 @@ components:
         name:
           type: string
     StudentRequestCreate:
-      x-package: "spring.ru.springtest.dto.create"
       type: object
       required:
         - name
@@ -514,8 +538,9 @@ components:
           minLength: 2
           maxLength: 50
     StudentRequestUpdate:
-      x-package: "spring.ru.springtest.dto.update"
       type: object
+      required:
+        - id
       properties:
         id:
           type: string
